--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,22 @@
-Flask==2.1.0
+flask==2.1.0
+requests==2.26.0
+fastjsonschema==2.16.2
+protobuf==4.21.6
+pyasn1==0.4.5
+django==2.2.28
+urllib3==1.26.6
+bcrypt==3.1.7
+paramiko==2.0.8
+pyyaml==5.3.1
+sqlalchemy==1.3.0
+pytz==2021.3
+pygments==2.10.0
+docutils==0.18.1
+networkx==2.7.1
+xmltodict==0.12.0
+PyQt5==5.15.6
+httplib2==0.20.2
+dash==2.1.0
+pyodbc==4.0.35
+pyjwt==2.3.0
+pytest==7.2.2
